<resources>
    <string name="app_name">Events4Friends</string>
    <string name="title_list">List</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="google_maps_key">AIzaSyA8nPTFCrCk_c43LlkOlCwvvMVmmcqUZJg</string>
    <string name="title_activity_list_object">ListObjectActivity</string>
    <string name="event_image">Event Image</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="event_location_icon">Event Location Icon</string>
    <string name="event_location_text">Event Location</string>
    <string name="event_time_icon">Event Time Icon</string>
    <string name="event_time_text">Event Time</string>
    <string name="button_showOnMap">Show On Map</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Benutzername</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_register">Registrieren</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirm_registry">Email not found. You want to create a new user with that email and password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="white">#FFFFFF</string>
    <string name="abmelden">Abmelden</string>
</resources>
