<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorWhite"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/contentcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/listobject_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/event_image" />

        <TextView
            android:id="@+id/listobject_title"
            android:layout_width="296dp"
            android:layout_height="36dp"
            android:text="@string/event_title"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/listobject_description"
            android:layout_width="394dp"
            android:layout_height="122dp"
            android:text="@string/event_description" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/listobject_location_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_column="0"
                android:layout_row="0"
                android:contentDescription="@string/event_location_icon"
                app:srcCompat="@drawable/ic_location_on_black_24dp"/>

            <TextView
                android:id="@+id/listobject_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/event_location_text"/>

            <ImageView
                android:id="@+id/listobject_time_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_column="0"
                android:layout_row="1"
                android:contentDescription="@string/event_time_icon"
                app:srcCompat="@drawable/ic_access_time_black_24dp"/>

            <TextView
                android:id="@+id/listobject_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/event_time_text"/>

        </GridLayout>

        <Button
            android:id="@+id/button_showOnMap"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_showOnMap" />
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:layout_below="@id/contentcontainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
</android.support.constraint.ConstraintLayout>